--- a/angels.html
+++ b/angels.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SAFE  — Angel Investors</title>
+  <title>SAFE — Angel Investors</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="shield.png" />
 </head>
@@ -86,16 +86,17 @@
       <div class="bg-white p-8 rounded-2xl shadow">
         <h2 class="text-xl font-semibold mb-4">Angel Investor List (Censored)</h2>
         <ul class="space-y-2 text-sm text-gray-700 max-h-[600px] overflow-y-auto pr-2">
-          <li>1-) shann212 — 0x****...****</li>
-          <li>2-) luna88 — 0x****...****</li>
-          <li>3-) cryptoking — 0x****...****</li>
-          <li>4-) alphaJoe — 0x****...****</li>
-          <li>5-) defiQueen — 0x****...****</li>
-          <li>6-) hodl4life — 0x****...****</li>
-          <li>7-) satslover — 0x****...****</li>
-          <li>8-) safehands — 0x****...****</li>
-          <li>9-) moonwalker — 0x****...****</li>
-          <li>10-) bearbull — 0x****...****</li>
+          <!-- Renamed all users -->
+          <li>1-) user1 — 0x****...****</li>
+          <li>2-) user2 — 0x****...****</li>
+          <li>3-) user3 — 0x****...****</li>
+          <li>4-) user4 — 0x****...****</li>
+          <li>5-) user5 — 0x****...****</li>
+          <li>6-) user6 — 0x****...****</li>
+          <li>7-) user7 — 0x****...****</li>
+          <li>8-) user8 — 0x****...****</li>
+          <li>9-) user9 — 0x****...****</li>
+          <li>10-) user10 — 0x****...****</li>
           <li>11-) user11 — 0x****...****</li>
           <li>12-) user12 — 0x****...****</li>
           <li>13-) user13 — 0x****...****</li>
@@ -153,6 +154,21 @@
         <a href="https://www.tiktok.com/@safecoinbnb" target="_blank" rel="noreferrer" class="text-sm hover:underline">TikTok</a>
         <a href="https://t.me/safecoinbnb" target="_blank" rel="noreferrer" class="text-sm hover:underline">Telegram</a>
       </div>
+    </div>
+
+    <!-- Disclaimer Section -->
+    <div class="max-w-4xl mx-auto px-6 pb-8 text-center text-xs text-gray-500 leading-relaxed">
+      <p class="mt-4">
+        SafeMoon was one of the first major liquidity-generating tokens. While its model showed promise,
+        a lack of transparency and alleged secret liquidity-lock rug-pulls led to trust issues.
+        SAFE applies those lessons to create a transparent, fair, and community-powered ecosystem.
+      </p>
+      <p class="mt-3 font-medium">
+        <strong>Disclaimer:</strong> SAFE is an independent community project and is not affiliated with, associated with,
+        or endorsed by SafeMoon LLC or any related entity. All mentions of “SafeMoon” are for comparative and educational
+        purposes only—to highlight how SAFE improves upon common token models.
+      </p>
+      <p class="mt-3 italic text-gray-400">The lawyers made us say all of that ☝️</p>
     </div>
   </footer>
 
