--- a/index.html
+++ b/index.html
@@ -291,6 +291,21 @@
         <a href="https://t.me/safecoinbnb" target="_blank" rel="noreferrer" class="text-sm hover:underline">Telegram</a>
       </div>
     </div>
+
+    <!-- DISCLAIMER ADDED BELOW  -->
+    <div class="max-w-6xl mx-auto px-6 pb-8 text-center text-xs text-gray-500 leading-relaxed">
+      <p class="mt-4">
+        SafeMoon was one of the first major liquidity-generating tokens. While its model showed promise,
+        a lack of transparency and alleged secret liquidity-lock rug-pulls led to trust issues.
+        SAFE applies those lessons to create a transparent, fair, and community-powered ecosystem.
+      </p>
+      <p class="mt-3 font-medium">
+        <strong>Disclaimer:</strong> SAFE is an independent community project and is not affiliated with, associated with,
+        or endorsed by SafeMoon LLC or any related entity. All mentions of “SafeMoon” are for comparative and educational
+        purposes only—to highlight how SAFE improves upon common token models.
+      </p>
+      <p class="mt-3 italic text-gray-400">Our lawyers made us say all of that ☝️</p>
+    </div>
   </footer>
 </body>
 </html>
