--- a/angels.html
+++ b/angels.html
@@ -64,11 +64,7 @@
             by a custom-built RNG-based selection algorithm.
           </p>
           <p>
-            Here’s how it worked: our Telegram bot automatically screened for newly created accounts and
-            rejected them outright — but even long-standing accounts weren’t automatically approved.
-            Instead, eligibility was determined by a lottery-style randomization mechanism, where each
-            Telegram user ID was run through a proprietary hash-based RNG formula. Only those whose IDs
-            matched the algorithm’s random draw were granted the right to participate in the presale.
+            Here’s how it worked: our Telegram bot automatically screened for newly created accounts and rejected them outright — but even long-standing accounts weren’t automatically approved. Instead, eligibility was determined by a lottery-style randomization mechanism, where each Telegram user ID was run through a proprietary built-in RNG formula. Only those whose IDs matched the algorithm’s random draw were granted the right to participate in the presale.
           </p>
           <p>
             This made “bundling” virtually impossible. To game the system, someone would need to buy
@@ -174,3 +170,4 @@
 
 </body>
 </html>
+
