--- a/angels.html
+++ b/angels.html
@@ -18,7 +18,7 @@
       <div>
         <div class="font-semibold text-lg">SAFE COIN</div>
         <div class="text-xs text-gray-500">
-          SafeMoon done right — transparent, fair, community-powered
+          SafeMoon done Your way — transparent, fair, community-powered
         </div>
       </div>
     </div>
@@ -50,7 +50,7 @@
           <p>You probably expected names like Wintermute or Jump Crypto here.</p>
           <p>But no — Safe Coin belongs to the average Joe.</p>
           <p>
-            Our Angel Investor Registration Phase ran transparently between <strong>September 12–16</strong>,
+            Our Angel Investor Registration Phase ran transparently between <strong>October 29 – 31</strong>,
             with no minimum entry requirement. Anyone could participate — and every record remains
             publicly verifiable through the Internet Archive and our official social channels.
           </p>
@@ -170,4 +170,5 @@
 
 </body>
 </html>
+
 
