--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <img src="shield.png" alt="SAFE logo" class="h-12 w-12 rounded-2xl shadow-lg" />
       </a>
       <div>
-        <div class="font-semibold text-lg">$SAFE Coin</div>
+        <div class="font-semibold text-lg">SAFE COIN</div>
         <div class="text-xs text-gray-500">SafeMoon done Your way — transparent, fair, community-powered.</div>
       </div>
     </div>
@@ -309,3 +309,4 @@
   </footer>
 </body>
 </html>
+
